Add noscript header

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <script src="js/CountDown/filter/seconds.js"></script>
     <link rel="stylesheet" href="css/main.css" />
   </head>
+  <noscript><pre>
+  <b>This page requires JavaScript Enabled to See anything remotely interesting</b>
+  </pre></noscript>
   <body ng-controller="Ticker"><pre>
     <b>Now</b>: {{time | date}}
        : {{time | dateUTC }}
