make cpanday tick faster and be more accurate

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <timer label="Weekly Deadline" refresh="500" deadline="weekly"></timer>
     <timer label="Daily Deadline" refresh="500" deadline="daily"></timer>
     <div id="cpan">
-      <timer label="CPAN Day Start" refresh="500" deadline="cpanday_start"></timer>
-      <timer label="CPAN Day End" refresh="500" deadline="cpanday_end"></timer>
+      <timer label="CPAN Day Start" refresh="100" precision="3" deadline="cpanday_start"></timer>
+      <timer label="CPAN Day End" refresh="100" precision="3" deadline="cpanday_end"></timer>
     </div>
   </body>
 
